# chat

./: .gitignore
ws_gateway/: Cargo.toml
ws_gateway/src/: lib.rs  main.rs
ws_gateway/src/domain/: client.rs  errors.rs
ws_gateway/src/infrastructure/http/: mod.rs  router.rs  state.rs  ws_handler.rs
