[package]
name = "ws_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
async-nats = "0.43.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = "0.15.17"
dotenvy = "0.15"
thiserror = "2.0.16"
async-trait = "0.1.89"
hyper = "1.7"
tracing = "0.1.14"
